--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!doctype html>
 <html>
 	<head>
-		<meta
+		<meta charset="utf">
 		<title> index page </title>
+		<style>
+		h3{
+			text-align:center;
+		}
+		h4{
+			text-align: right;
+            box-sizing: border-box;
+            background-color: brown;
+        }
+        #div1{
+                display: table-cell;
+                background-color:purple;
+                border:1px solid black;
+                margin-left: 5px;
+        }
+        #div2{
+                display: table-cell;
+                background-color:purple;
+                border:1px solid black;
+                margin:5px;
+        }
+        #div3{
+                display: table-cell;
+                background-color:purple;
+                border:1px solid black;
+                margin-left: 5px;
+        }
+		</style>
 	</head>
 	<body>
-		<h1>Our Menu</h1>
-		<div>
+		<h3>Our Menu</h3>
+		<div id="div1">
+		<h4>Chicken</h4>
+Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
+		</div>
+		<div id="div2">
+		<h4>Beef</h4>
+Beef is the third most widely consumed meat in the world, accounting for about 25% of meat production worldwide, after pork and poultry at 38% and 30% respectively. In absolute numbers, the United States, Brazil, and the People's Republic of China are the world's three largest consumers of beef. 
+		</div>
+		<div id="div3">
+		<h4>Sushi</h4>
+Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice or short-grain rice. It is very often prepared with seafood, such as squid, eel, yellowtail, salmon, tuna or imitation crab meat. Many types of sushi are vegetarian. It is often served with pickled ginger (gari), wasabi, and soy sauce.
+		</div>
+
 	</body>
 </html>
